// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index createDefaultModel default-snapshot 1`] = `
Object {
  "partA": Object {
    "choiceMode": "radio",
    "choicePrefix": "numbers",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": true,
    "gridColumns": "2",
    "prompt": "Prompt A",
    "promptEnabled": true,
    "rationale": "",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "",
    "teacherInstructionsEnabled": true,
  },
  "partB": Object {
    "choiceMode": "radio",
    "choicePrefix": "numbers",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": true,
    "gridColumns": "2",
    "prompt": "Prompt B",
    "promptEnabled": true,
    "rationale": "",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "",
    "teacherInstructionsEnabled": true,
  },
  "partLabelType": "Letters",
  "partLabels": true,
  "partialScoring": false,
}
`;

exports[`index createDefaultModel with-overrides-snapshot 1`] = `
Object {
  "partA": Object {
    "choiceMode": "radio",
    "choicePrefix": "numbers",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": true,
    "gridColumns": "2",
    "prompt": "Prompt A",
    "promptEnabled": true,
    "rationale": "foo",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "ti",
    "teacherInstructionsEnabled": true,
  },
  "partB": Object {
    "choiceMode": "radio",
    "choicePrefix": "numbers",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": true,
    "gridColumns": "2",
    "prompt": "Prompt B",
    "promptEnabled": true,
    "rationale": "",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "",
    "teacherInstructionsEnabled": true,
  },
  "partLabelType": "Letters",
  "partLabels": true,
  "partialScoring": false,
}
`;
